objects/advpm__Rate__c.object
<CustomObject>
    <customHelpPage>advpm__HelpRate</customHelpPage>
    <fields>
        <fullName>advpm__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Charged_Per__c</fullName>
        <label>Charged Per</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hour</fullName>
                    <default>true</default>
                    <label>Hour</label>
                </value>
                <value>
                    <fullName>Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Matter_Legal_Hold__c</fullName>
        <formula>IF ( advpm__Matter__r.advpm__Legal_Hold__c , &quot;Yes&quot;, &quot;No&quot; )</formula>
        <label>Matter Legal Hold</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Matter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matter</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Rates</relationshipLabel>
        <relationshipName>Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Rate_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Group</label>
        <referenceTo>advpm__Rate_Group__c</referenceTo>
        <relationshipLabel>Rates</relationshipLabel>
        <relationshipName>Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Rate_Type__c</fullName>
        <label>Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Expense</fullName>
                </value>
                <value>
                    <fullName>Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>advpm__Timekeeper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timekeeper</label>
        <referenceTo>advpm__Timekeeper__c</referenceTo>
        <relationshipLabel>Rates</relationshipLabel>
        <relationshipName>Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Rate</label>
    <listViews>
        <fullName>advpm__All</fullName>
        <columns>NAME</columns>
        <columns>advpm__Matter__c</columns>
        <columns>advpm__Timekeeper__c</columns>
        <columns>advpm__Rate__c</columns>
        <columns>advpm__Active__c</columns>
        <columns>advpm__Default__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>